--- a/jupyter_test/testing_notebook.ipynb
+++ b/jupyter_test/testing_notebook.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Testing notebook: heart sound prediction"
+    "# Testing notebook: Lung & heart sound separation"
    ]
   },
   {
@@ -23,8 +23,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-15T17:15:14.257584Z",
-     "start_time": "2021-11-15T17:15:14.242956Z"
+     "end_time": "2021-11-21T01:38:22.545499Z",
+     "start_time": "2021-11-21T01:38:22.536498Z"
     }
    },
    "outputs": [],
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-15T17:15:15.237910Z",
-     "start_time": "2021-11-15T17:15:15.224770Z"
+     "end_time": "2021-11-21T01:38:29.303311Z",
+     "start_time": "2021-11-21T01:38:29.295312Z"
     }
    },
    "outputs": [],
    "source": [
-    "assert os.getcwd().split('\\\\')[-1] == 'Heart Sound Prediction'"
+    "assert os.getcwd().split('\\\\')[-1] == 'Lung_heart_source_separation'"
    ]
   },
   {
@@ -81,8 +81,18 @@
     "from prediction_functions import find_and_open_audio, hss_segmentation\n",
     "from hsp_utils.filter_and_sampling import downsampling_signal\n",
     "\n",
-    "# Parámetros de las funciones\n",
+    "# Definición de los parámetros de filtros pasa bajos de la salida de la red\n",
     "lowpass_params = {'freq_pass': 140, 'freq_stop': 150}\n",
+    "\n",
+    "# Definición de los parámetros NMF\n",
+    "nmf_parameters = {'n_components': 2, 'N': 1024, 'N_lax': 100, \n",
+    "                  'N_fade': 100, 'noverlap': int(0.9 * 1024), 'repeat': 0, \n",
+    "                  'padding': 0, 'window': 'hamming', 'init': 'random',\n",
+    "                  'solver': 'mu', 'beta': 2, 'tol': 1e-4, \n",
+    "                  'max_iter': 500, 'alpha_nmf': 0, 'l1_ratio': 0, \n",
+    "                  'random_state': 0, 'dec_criteria': 'temp_criterion'}\n",
+    "\n",
+    "# Otros parámetros\n",
     "model_name = 'definitive_segnet_based'\n",
     "db_folder = 'samples_test'"
    ]
@@ -273,6 +283,18 @@
    "display_name": "Python 3.7.4 64-bit",
    "language": "python",
    "name": "python37464bitab4ed06c875e4946b81a767f6fb6a233"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   },
   "rise": {
    "scroll": true
